--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-   
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -12,6 +11,7 @@
   "dependencies": {
     "@ai-sdk/openai": "^1.3.22",
     "@hookform/resolvers": "^5.0.1",
+    "@radix-ui/react-alert-dialog": "^1.1.13",
     "@radix-ui/react-label": "^2.1.6",
     "@radix-ui/react-slot": "^1.2.2",
     "ai": "^4.3.15",
